--- a/React.tsx/package.json
+++ b/React.tsx/package.json
@@ -22,6 +22,7 @@
     "@mui/styles": "^5.13.2",
     "@mui/x-data-grid": "^6.9.2",
     "@mui/x-date-pickers": "^6.9.2",
+    "@react-pdf/renderer": "^3.1.14",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.9",
